test-suite/bugs/closed/bug_3281.v
Definition a := @eq _ nat Type.
Fail Definition b := @eq Set nat Type.

Definition c := @eq Type nat Type.
Definition d := @eq _ Type nat.
